# senior-research

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
src/: exec.rs  history.rs  main.rs  parser.rs
tex/background/: background-edited.tex
tex/paper/: paper.tex  references.bib  rust.tex
tex/proposal/: proposal.bib  proposal.tex
