[package]
name = "senior-research"
version = "0.1.0"
edition = "2018"
authors = ["Shreyas Mayya"]
license = "MIT"
description = "An attempt at a shell."
repository = "https://github.com/smayya337/senior-research"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
hostname = "0.3.1"
is_executable = "1.0.1"
regex = "1.5.4"
termion = "1.5.6"
users = "0.11.0"